--- a/chat/src/main/res/layout/item_user_image_message.xml
+++ b/chat/src/main/res/layout/item_user_image_message.xml
@@ -1,72 +1,90 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginTop="10dp"
+    android:layout_marginBottom="10dp"
+    android:layout_marginStart="20dp"
+    android:layout_marginEnd="20dp">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/container"
+    <include
+        android:id="@+id/include_date"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp">
+        layout="@layout/item_date_message" />
 
-        <include
-            android:id="@+id/include_date"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            layout="@layout/item_date_message" />
-
-        <FrameLayout
-            android:id="@+id/content_container"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/include_date">
-
-            <ImageView
-                android:id="@+id/user_image"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-
-        </FrameLayout>
-
-        <TextView
-            android:id="@+id/author"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center_vertical"
-            android:fontFamily="@font/ubuntu_regular"
-            android:textFontWeight="600"
-            android:layout_marginEnd="4dp"
-            app:layout_constraintEnd_toStartOf="@id/time"
-            app:layout_constraintTop_toTopOf="@id/time"
-            app:layout_constraintBottom_toBottomOf="@id/time" />
-
-        <TextView
-            android:id="@+id/time"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center_vertical"
-            android:fontFamily="@font/ubuntu_regular"
-            android:textFontWeight="600"
-            android:layout_marginTop="10dp"
-            android:layout_marginEnd="4dp"
-            app:layout_goneMarginEnd="0dp"
-            app:layout_constraintTop_toBottomOf="@id/content_container"
-            app:layout_constraintEnd_toStartOf="@id/status" />
+    <FrameLayout
+        android:id="@+id/content_container"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/include_date">
 
         <ImageView
-            android:id="@+id/status"
-            android:layout_width="14dp"
-            android:layout_height="14dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@id/time"
-            app:layout_constraintBottom_toBottomOf="@id/time" />
+            android:id="@+id/user_image"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        <LinearLayout
+            android:id="@+id/user_image_warning"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:orientation="vertical"
+            android:gravity="center"
+            android:visibility="gone">
 
-</FrameLayout>
+            <ImageView
+                android:layout_width="36dp"
+                android:layout_height="36dp"
+                android:src="@drawable/ic_warning"
+                android:rotation="180"
+                android:tint="@color/default_color_info"
+                android:layout_gravity="center_horizontal" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/warning_loading_image"
+                android:gravity="center"
+                android:layout_marginTop="8dp" />
+
+        </LinearLayout>
+
+    </FrameLayout>
+
+    <TextView
+        android:id="@+id/author"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical"
+        android:fontFamily="@font/ubuntu_regular"
+        android:textFontWeight="600"
+        android:layout_marginEnd="4dp"
+        app:layout_constraintEnd_toStartOf="@id/time"
+        app:layout_constraintTop_toTopOf="@id/time"
+        app:layout_constraintBottom_toBottomOf="@id/time" />
+
+    <TextView
+        android:id="@+id/time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical"
+        android:fontFamily="@font/ubuntu_regular"
+        android:textFontWeight="600"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="4dp"
+        app:layout_goneMarginEnd="0dp"
+        app:layout_constraintTop_toBottomOf="@id/content_container"
+        app:layout_constraintEnd_toStartOf="@id/status" />
+
+    <ImageView
+        android:id="@+id/status"
+        android:layout_width="14dp"
+        android:layout_height="14dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@id/time"
+        app:layout_constraintBottom_toBottomOf="@id/time" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
